fixed react-to-print not showing any styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,8 +49,6 @@ body {
     }
   }
 
-
-
   ul {
   list-style-type: none;
   margin: 0;
@@ -60,10 +58,6 @@ body {
     margin: 10px;
   }
 }
-
-
-
-
 }
 
 .container {
@@ -104,11 +98,14 @@ body {
 
     }
 
-    input {
+    input, textarea {
     margin: .5em -.5em;
     padding: 5px;
     min-width: 100%;
     max-width: 100%;
+      font-family: 'Lato';
+      font-size: 1em;;
+      
 
     }
     .practicalClass:not(:last-child){
@@ -124,9 +121,14 @@ body {
     }
   }
 
-  .cv__view {
+
+  
+
+}
+
+.cv__view {
+
     width: 595px;
-    min-width: 595px;
     height: 842px;
     border: black solid 1px;
     margin: 1em;
@@ -134,9 +136,6 @@ body {
     background: #f2f6f7;
     display: flex;
     flex-direction: column;
-  }
-
-  .cv__view {
 
     header {
       display: flex;
@@ -193,11 +192,18 @@ body {
     }
   }
 
-}
-
 
 @media only screen and (max-width: 600px) {
   body {
     font-size: -1.5em;
+  }
+}
+
+@media print {
+  .cv__view {
+    width: auto;
+    height: 1vh;
+    border: none;
+    background: none;
   }
 }
